--- a/reactjs/tododemo/layouts/home.html
+++ b/reactjs/tododemo/layouts/home.html
@@ -15,6 +15,7 @@
 			<ul>
    				<li> account </li>
     			<li> to-dos</li>
+                <li> logout</li>
    			</ul>
  		</div>
   		<div class="content">
