update demo to be able to do crud

--- a/reactjs/tododemo/layouts/home.html
+++ b/reactjs/tododemo/layouts/home.html
@@ -21,9 +21,9 @@
   		<div class="content">
    			<div id="todo">
    				<ul>
-    				<li> to-do-list1</li>
-        			<li> to-do-list2</li>
-        			<li> to-do-list3</li>
+    				<li> <span>to-do-list1</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
+        			<li> <span>to-do-list2</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
+        			<li> <span>to-do-list3</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
     			</ul>
    			</div>
    			<div id="acc">
