--- a/reactjs/tododemo/layouts/home.css
+++ b/reactjs/tododemo/layouts/home.css
@@ -8,8 +8,13 @@
 .menu { background: #FCC; float: left; width: 180px; height: 740px; padding: 30px 10px; }
 .menu ul { list-style: none; }
 .menu ul li { font-size: 16px; height: 40px; font-weight: bolder; color: #00F; }
-.content #todo { display: none; }
-.content #acc { display: block; }
+.content #todo { display: block; }
+.content #todo ul { list-style: none; }
+.content #todo ul li { height: 40px; font-size: 18px; text-align: left; display: block; }
+.content #todo ul li:hover{ background: #6C6; }
+
+.content #acc { display: none; }
+.rc-dialog-body label { font-weight: bolder; }
 
 
 
