integrated with express backend

--- a/reactjs/tododemo/layouts/home.html
+++ b/reactjs/tododemo/layouts/home.html
@@ -20,25 +20,34 @@
  		</div>
   		<div class="content">
    			<div id="todo">
-   				<ul>
-    				<li> <span>to-do-list1</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
-        			<li> <span>to-do-list2</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
-        			<li> <span>to-do-list3</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
-    			</ul>
+            	<div class="error">xxxxxxxxxxxxxxxxx</div>
+                <div class="loading">Loading in todo</div>
+                <div id="add"><a href="#"><img width="20"  height="20" src="add.svg"/></a></div>
+                <div>
+                	<ul>
+    					<li> <span>to-do-list1</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
+        				<li> <span>to-do-list2</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
+        				<li> <span>to-do-list3</span> <a href="#">view</a>&nbsp;&nbsp;<a href="#">edit</a>&nbsp;&nbsp;<a href="#">delete</a></li>
+    				</ul>
+                </div>
    			</div>
    			<div id="acc">
-        		<form>
-            		<label> ID : </label> <input name="id" readonly="readonly"/>
-                	<p/>
-            		<label>User Name: </label> <input name="name"/>
-        			<p/>
-        			<label>Age: </label><input name="age"/>
-       				<p/>
-        			<label>Address: </label><input name="addr"/>
-        			<p/>
-                	<button type="submit">Submit</button>
-            	</form> 			
-   			</div>	
+            	<div class="error">ccccccc</div>
+                <div class="loading">Loading in acc</div>
+                <div>
+                	<form>
+            			<label> ID : </label> <input name="id" readonly="readonly"/>
+                		<p/>
+            			<label>User Name: </label> <input name="name"/>
+        				<p/>
+        				<label>Age: </label><input name="age"/>
+       					<p/>
+        				<label>Address: </label><input name="addr"/>
+        				<p/>
+                		<button type="submit">Submit</button>
+            		</form> 	
+                </div>			
+   			</div>
  		</div>
     </div>	
  </div>
