--- a/reactjs/tododemo/src/components/home.css
+++ b/reactjs/tododemo/src/components/home.css
@@ -9,16 +9,24 @@
 .menu ul { list-style: none; }
 .menu ul li { font-size: 16px; height: 40px; font-weight: bolder; color: #00F; }
 
-.content #todo { display: block; }
-.content #acc { display: block; }
-
 .content #todo ul { list-style: none; }
+.content .error { font-size: 16px; color: #F00; height: 30px; }
+
 .content #todo ul li { height: 40px; font-size: 18px; text-align: left; display: block; }
 .content #todo ul li:hover{ background: #6C6; }
 
+.content #todo { display: block; }
+.content #acc { display: block; }
+.content .loading { font-size: larger; font-weight: bolder; text-align: center; display: block;}
+.content #todo #add { height: 30px; margin-right: 20px; }
+.content #todo #add a { display: block; float: right; }
 
-/* dialog */
+
+
+
 .rc-dialog-body label { font-weight: bolder; }
+
+
 
 
 .content { background: #CCC; height: 740px; margin-left: 230px; padding: 30px 10px; }
