--- a/css+div/dummy-youtube/css/index.css
+++ b/css+div/dummy-youtube/css/index.css
@@ -34,49 +34,15 @@ input { outline: none; margin: 0; padding: 0;}
 /* style for subheader */
 #subheader {
     height:70px;
-    width: 100%;
-    
+    width: calc(100% - 300px);
+    padding-left: 10%;
+    box-sizing: border-box;
+    margin-left: 300px;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
 }
 
-#burger {
-    width: 250px;  
-}
-#burger > div {
-    width: 50px;
-    height:50px;
-    display: inline-block;
-    border-radius: 30px;
-    margin-left: 10px;
-    margin-right: 20px;
-    cursor: pointer;
-}
-#burger > div:hover {
-    background-color: #f2f2f2;
-    height:50px;
-}
-#burger #spans {
-    position: relative;
-}
-#burger #spans span {
-    display: inline-block;
-    position: absolute;
-    top:24px;
-    left:13px;
-    padding: 1px 0;
-    background-color: #5f5f5f;
-    width: 22px;
-}
-#burger #spans span:nth-child(1) {
-    top:17px;
-}
-#burger #spans span:nth-child(3) {
-    top:31px;
-}
-#burger a {
-    display: inline-block;
-}
+
 /* style for tabs */
 #tabs {
     height: 70px;
@@ -110,7 +76,8 @@ input { outline: none; margin: 0; padding: 0;}
 
 /* styles for search */
 #search {
-    width: 50%;
+    min-width: 250px;
+    width: 60%;
     height: 50px;
     margin-bottom: 20px;
 }
@@ -264,7 +231,8 @@ input { outline: none; margin: 0; padding: 0;}
 
 /* styles for me */
 #me {
-    width: 240px;
+    width: 20%;
+    min-width: 150px;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -338,19 +306,64 @@ input { outline: none; margin: 0; padding: 0;}
     left: 0;
     border-radius: 25px; 
 }
+/*style for left*/
+#left {
+    position: fixed;
+    width: var(--sideSize);
+    height: 100%;
+    background-color: #fff;
+    top:0;
+    left: 10px;
+}
+#burger {
+    margin-top: 10px;
+    width: 250px;
 
-
+}
+#burger > div {
+    width: 50px;
+    height:50px;
+    display: inline-block;
+    border-radius: 30px;
+    margin-left: 10px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+#burger > div:hover {
+    background-color: #f2f2f2;
+    height:50px;
+}
+#burger #spans {
+    position: relative;
+}
+#burger #spans span {
+    display: inline-block;
+    position: absolute;
+    top:24px;
+    left:13px;
+    padding: 1px 0;
+    background-color: #5f5f5f;
+    width: 22px;
+}
+#burger #spans span:nth-child(1) {
+    top:17px;
+}
+#burger #spans span:nth-child(3) {
+    top:31px;
+}
+#burger a {
+    display: inline-block;
+}
 /* styles for menu */
 #menu {
-    width: var(--sideSize);
-    height: 1000px;
+    width: 100%;
+    height: 90%;
     position:absolute;
-    top: 80px;
     padding-left: 10px;
     padding-right: 10px;
-    height: 90%;
+    top: 80px;
     box-sizing: border-box;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 #menu ul li {
     height: 50px;
@@ -395,6 +408,21 @@ input { outline: none; margin: 0; padding: 0;}
     padding-top: 20px;
     font-size:large;
     color: #000;
+}
+#menu:hover {
+    overflow-y: scroll;
+}
+::-webkit-scrollbar{
+    width:8px;
+}
+::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background-color: #b8b8b8;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.5);
+}
+::-webkit-scrollbar-track{
+    border-radius: 10px;
+    background-color: #fff;
 }
 
 
