--- a/css+div/dummy-youtube/css/index.css
+++ b/css+div/dummy-youtube/css/index.css
@@ -21,7 +21,6 @@ input { outline: none; margin: 0; padding: 0;}
 
 #header{
     width: 100%;
-    height: 70px;
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 30px;
@@ -29,24 +28,60 @@ input { outline: none; margin: 0; padding: 0;}
     box-sizing: border-box;
     top: 0;
     left: 0;
-    z-index: 1;
 }
 
 /* style for subheader */
 #subheader {
-    height:100%;
-    width: calc(100% - 300px);
-    padding-left: 10%;
+    height:70px;
+    width: 100%;
     box-sizing: border-box;
-    margin-left: 300px;
     display: flex;
     justify-content: space-between;
+}
+/* styles for burger*/
+#burger {
+    margin-top: 10px;
+    width: 250px;
+}
+#burger > div {
+    width: 50px;
+    height:50px;
+    display: inline-block;
+    border-radius: 30px;
+    margin-left: 10px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+#burger > div:hover {
+    background-color: #f2f2f2;
+    height:50px;
+}
+#burger #spans {
+    position: relative;
+}
+#burger #spans span {
+    display: inline-block;
+    position: absolute;
+    top:24px;
+    left:13px;
+    padding: 1px 0;
+    background-color: #5f5f5f;
+    width: 22px;
+}
+#burger #spans span:nth-child(1) {
+    top:17px;
+}
+#burger #spans span:nth-child(3) {
+    top:31px;
+}
+#burger a {
+    display: inline-block;
 }
 
 /* styles for search */
 #search {
     min-width: 250px;
-    width: 60%;
+    width: 50%;
     height: 50px;
     margin-bottom: 20px;
 }
@@ -276,59 +311,44 @@ input { outline: none; margin: 0; padding: 0;}
     left: 0;
     border-radius: 25px; 
 }
-/*style for left*/
-#left {
-    position: fixed;
-    width: 300px;
-    height: 100%;
-    background-color: #fff;
-    top:0;
-    left: 10px;
+/* style for tabs */
+#tabs {
+    height: 80px;
+    width: 100%;
+    margin-left: calc(var(--sideSize) + 40px);
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
 }
-#burger {
-    margin-top: 10px;
-    width: 250px;
-
-}
-#burger > div {
-    width: 50px;
-    height:50px;
-    display: inline-block;
-    border-radius: 30px;
-    margin-left: 10px;
-    margin-right: 20px;
+#tabs span {
+    display:inline-block;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background-color: #efefef;
+    padding: 2px 15px;
+    margin-right: 15px;
+    border-radius: 5px;
     cursor: pointer;
 }
-#burger > div:hover {
-    background-color: #f2f2f2;
-    height:50px;
-}
-#burger #spans {
-    position: relative;
-}
-#burger #spans span {
-    display: inline-block;
-    position: absolute;
-    top:24px;
-    left:13px;
-    padding: 1px 0;
+#tabs span.cur {
     background-color: #5f5f5f;
-    width: 22px;
+    color: #f2f2f2;
 }
-#burger #spans span:nth-child(1) {
-    top:17px;
+#tabs span:hover {
+    background-color: #c8c8c8;
 }
-#burger #spans span:nth-child(3) {
-    top:31px;
+#tabs span.cur:hover{
+    background-color: #5f5f5f;
+    color: #f2f2f2;
 }
-#burger a {
-    display: inline-block;
-}
+
+
 /* styles for menu */
 #menu {
     width: var(--sideSize);
     height: 90%;
-    position:absolute;
+    position:fixed;
     padding-left: 10px;
     padding-right: 10px;
     top: 80px;
@@ -396,52 +416,16 @@ input { outline: none; margin: 0; padding: 0;}
     background-color: #fff;
 }
 
-
 /* styles for main */
-#right {
-    position: relative; 
-    top: 80px;
-    left: var(--sideSize);
-    width: calc(100% - var(--sideSize));
-    overflow: hidden;
-}
 main {
-    width: 100%;
+    margin-top: 160px;
+    margin-left: var(--sideSize);;
+    width: calc(100% - var(--sideSize));
     padding-left: 40px;
     padding-right: 30px;
     box-sizing: border-box;
     height: 80%;
     overflow-y: scroll;
-}
-
-/* style for tabs */
-#tabs {
-    height: 70px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-#tabs span {
-    display:inline-block;
-    height: 30px;
-    text-align: center;
-    background-color: #efefef;
-    padding: 2px 10px;
-    line-height: 30px;
-    margin-right: 15px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-#tabs span.cur {
-    background-color: #5f5f5f;
-    color: #f2f2f2;
-}
-#tabs span:hover {
-    background-color: #c8c8c8;
-}
-#tabs span.cur:hover{
-    background-color: #5f5f5f;
-    color: #f2f2f2;
 }
 
 .primary {
