--- a/css+div/dummy-youtube/css/index.css
+++ b/css+div/dummy-youtube/css/index.css
@@ -40,8 +40,7 @@ input { outline: none; margin: 0; padding: 0;}
 }
 /* styles for burger*/
 #burger {
-    margin-top: 10px;
-    width: 250px;
+    min-width: 250px;
 }
 #burger > div {
     width: 50px;
