--- a/css+div/dummy-youtube/css/index.css
+++ b/css+div/dummy-youtube/css/index.css
@@ -353,6 +353,10 @@ input { outline: none; margin: 0; padding: 0;}
     top: 80px;
     box-sizing: border-box;
     overflow-y:hidden;
+    display: none;
+}
+#menu.active {
+    display: block;
 }
 #menu ul li {
     height: 50px;
@@ -415,6 +419,47 @@ input { outline: none; margin: 0; padding: 0;}
     background-color: #fff;
 }
 
+/* style for min-menu*/
+#min-menu {
+    position: fixed;
+    top: 80px;
+    width: var(--sideSize);
+    bottom: 10px;
+    display: none;
+}
+#min-menu.active {
+    display: block;
+}
+
+#min-menu ul {
+    width: 100%;
+    margin: 0;
+    font-size: small;
+    text-align: center;
+}
+
+#min-menu ul li {
+    width: 100%;
+    position:relative;
+    box-sizing:border-box;
+    border-radius: 20px;
+}
+#min-menu ul li a {
+    display: block;
+    padding: 70px 20px 20px 10px;
+}
+
+#min-menu ul li img {
+    width: 40px;
+    position: absolute;
+    top:20px;
+    left: 25px;
+}
+#min-menu ul li:hover {
+    background-color: #f2f2f2;
+}
+
+
 /* styles for main */
 main {
     margin-top: 160px;
@@ -432,8 +477,10 @@ main {
     flex-wrap: wrap;
 }
 .primary .vedio {
-    width: 350px;
-    height: 300px;
+    width: 450px;
+    min-width:45px; 
+    height: 400px;
+    min-height: 400px;
     background-color: blueviolet;
     box-sizing: border-box;
     margin-right: 30px;
@@ -512,12 +559,20 @@ div.close.active {
     flex-wrap: wrap;
 }
 .short .vedio {
-    width: 250px;
-    height: 400px;
+    width: 300px;
+    min-width:300px; 
+    height: 450px;
+    min-height:450px;
     background-color: blueviolet;
     box-sizing: border-box;
     margin-right: 30px;
     margin-bottom: 50px;
+}
+main .line {
+    padding: 2px 0;
+    background-color: #c6c4c4;
+    width: 100%;
+    margin-bottom: 30px;
 }
 
 
