--- a/css+div/dummy-youtube/css/menu.css
+++ b/css+div/dummy-youtube/css/menu.css
@@ -4,15 +4,23 @@
     height: 90%;
     position:fixed;
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 15px;
     top: 80px;
-    box-sizing: border-box;
+    box-sizing:border-box;
     overflow-y:hidden;
     display: none;
 }
 #menu.active {
     display: block;
 }
+#menu ul {
+   width:calc(var(--sideSize) - 25px - 8px);  
+   /* fix bug: when toggle scroll, the width of ul dynamically changed
+   Here 25px is the the sum of padding-left and padding-right in menu
+   8px is the reserved for scroll
+   */
+}
+
 #menu ul li {
     height: 50px;
     line-height: 50px;
@@ -35,6 +43,21 @@
     top: 7px;
     left: 10px;
 }
+#menu ul.subs li span {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    padding: 0;
+    color: blue;
+    font-size: larger;
+    top: 0;
+    right: 10px;
+    display: none;
+}
+#menu ul.subs li.new span {
+    display: block;
+}
+
 #menu ul li:hover {
     background-color: #c8c8c8;
 }
@@ -111,5 +134,5 @@
     left: 25px;
 }
 #min-menu ul li:hover {
-    background-color: #f2f2f2;
+    background-color: #c8c8c8;
 }
