fix bugs and add detail page

--- a/css+div/dummy-youtube/css/header.css
+++ b/css+div/dummy-youtube/css/header.css
@@ -1,3 +1,10 @@
+/* styles for logo*/
+#logo {
+    height:70px;
+    position: fixed;
+    top: 10;
+}
+/* styles for header*/
 #header{
     width: calc(100% - 340px);
     height:70px;
