--- a/css+div/dummy-youtube/css/common.css
+++ b/css+div/dummy-youtube/css/common.css
@@ -2,7 +2,9 @@
 :root {
     --sideSize:300px
 }
+/* end of css global variables */
 
+/* common styles*/
 body {
   margin: 0 10px;
   background: #f3f2f2;
@@ -18,9 +20,3 @@ a {
     color: #000;
 }
 input { outline: none; margin: 0; padding: 0;}
-
-#logo {
-    height:70px;
-    position: fixed;
-    top: 10;
-}
