--- a/css+div/dummy-youtube/css/menu.css
+++ b/css+div/dummy-youtube/css/menu.css
@@ -7,8 +7,12 @@
     padding-right: 15px;
     top: 80px;
     box-sizing:border-box;
+    -webkit-transition: left ease-in 0.6s;
+    transition: left ease-in 0.6s;
+    left: 10px;
+    border-radius: 20px;
     overflow-y:hidden;
-    display: none;
+    display:none;
 }
 #menu.active {
     display: block;
