--- a/css+div/dummy-youtube/css/common.css
+++ b/css+div/dummy-youtube/css/common.css
@@ -6,7 +6,7 @@
 
 /* common styles*/
 body {
-  margin: 0 10px;
+  margin: 0px 10px;
   background: #f3f2f2;
   font-family: "Roboto", "Arial", "sans-serif";
   color: #4b4b4b;
