--- a/css+div/dummy-youtube/css/details.css
+++ b/css+div/dummy-youtube/css/details.css
@@ -2,12 +2,75 @@
 @import url("./header.css");
 @import url("./menu.css");
 
-
 #menu {
     background-color: #fff;
     left: -400px;
 }
+body {
+    padding-top: 0.01em;
+}
 
 #menu.show {
-    left: 10px;
+    left: 0;
+}
+
+#content {
+    margin-top: 80px;
+    padding: 0 80px;
+    width: calc(100% - 160px);
+    height: 1400px;
+    /* enable the y scroll of the content. 
+    The scroll in y of body is disabled because the total height of body is less than the height of viewport*/
+    /*height: 90%;
+    overflow-y: scroll;*/
+    background-color: coral;
+}
+/* styles for mask*/
+#mask {
+    position: fixed;
+    background:rgba(74, 74, 74, 0.5);
+    width: calc(100% - var(--sideSize));
+    height: 100%;
+    top: 0;
+    left: var(--sideSize);
+    z-index: 1;
+    display: none;
+}
+#mask.show {
+    display: block;
+}
+/*styles for videos*/
+#videos{
+    display: flex;
+    flex-wrap: wrap;
+}
+/* styles for #videos #major*/
+#videos #major{
+    height: 500px;
+    flex: 1 1 800px;
+    background-color: darkolivegreen;
+    margin-right: 20px;
+}
+#videos #reds {
+    max-width: 100%;
+    flex: 1 0 300px;
+    height: 600px;
+    background-color: cadetblue;
+}
+/* styles for comments*/
+#comments {
+    width: 100%;
+    height: 400px;
+    background-color: hotpink;
+}
+@media screen and (min-width: 1308px) {
+    #videos #reds {
+        max-width: 500px;
+    }
+}
+@media screen and (max-width: 1308px) {
+    #videos #major {
+        width: 100%;
+        margin-right: 0px;
+    }
 }
