--- a/css+div/dummy-youtube/css/header.css
+++ b/css+div/dummy-youtube/css/header.css
@@ -1,30 +1,30 @@
 /* styles for logo*/
-#logo {
+.logo {
     height:70px;
-    position: fixed;
-    top: 10;
+    top: 0;
 }
+
 /* styles for header*/
 #header{
-    width: calc(100% - 340px);
-    height:70px;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 30px;
+    width: 100%;
+    height:80px;
+    background: #f3f2f2;
+    padding-left: 0px;
+    padding-right: 50px;
     position: fixed;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     top: 0;
-    left: 340px;
     z-index: 1;
+    padding-top: 10px; /* fix bug of margin collapse*/
 }
 
 /* styles for burger*/
-#burger {
+.burger {
     min-width: 250px;
 }
-#burger > div {
+.burger > div {
     width: 50px;
     height:50px;
     display: inline-block;
@@ -33,14 +33,14 @@
     margin-right: 20px;
     cursor: pointer;
 }
-#burger > div:hover {
+.burger > div:hover {
     background-color: #c8c8c8;
     height:50px;
 }
-#burger #spans {
+.burger #spans {
     position: relative;
 }
-#burger #spans span {
+.burger #spans span {
     display: inline-block;
     position: absolute;
     top:24px;
@@ -49,20 +49,20 @@
     background-color: #5f5f5f;
     width: 22px;
 }
-#burger #spans span:nth-child(1) {
+.burger #spans span:nth-child(1) {
     top:17px;
 }
-#burger #spans span:nth-child(3) {
+.burger #spans span:nth-child(3) {
     top:31px;
 }
-#burger a {
+.burger a {
     display: inline-block;
 }
 
 /* styles for search */
 #search {
     min-width: 250px;
-    width: 70%;
+    width: 50%;
     height: 50px;
     margin-bottom: 20px;
 }
@@ -286,11 +286,11 @@
 }
 #me .togzhi span:nth-of-type(2) {
     position: absolute;
-    width: 18px;
-    height: 18px;
-    font-size: small;
+    width: 20px;
+    height: 20px;
+    font-size:x-small;
     text-align: center;
-    line-height: 18px;
+    line-height: 20px;
     color: #fff;
     font-weight: bolder;
     background: rgb(218, 2, 2);
