--- a/css+div/dummy-youtube/css/menu.css
+++ b/css+div/dummy-youtube/css/menu.css
@@ -1,29 +1,38 @@
 /* styles for menu */
 #menu {
     width: var(--sideSize);
-    height: 90%;
     position:fixed;
-    padding-left: 10px;
-    padding-right: 15px;
-    top: 80px;
+    background: #f3f2f2;
+    top: 0;
     box-sizing:border-box;
     -webkit-transition: left ease-in 0.3s;
     transition: left ease-in 0.3s;
-    left: 10px;
-    border-radius: 20px;
-    overflow-y:hidden;
-    display:none;
+    left: 10;
+    padding-top: 10px;
+    z-index: 2;
+    display: none;
 }
 #menu.active {
     display: block;
 }
-#menu ul {
-   width:calc(var(--sideSize) - 25px - 8px);  
-   /* fix bug: when toggle scroll, the width of ul dynamically changed
-   Here 25px is the the sum of padding-left and padding-right in menu
-   8px is the reserved for scroll
-   */
+
+#menu #menutails {
+    height: 1500px;
+    padding-left: 10px;
+    padding-right: 15px;
+    cursor: pointer;
+    overflow-y:none
 }
+#menu #menutails:hover {
+    overflow-y: scroll;
+}
+#menu ul {
+    width:calc(var(--sideSize) - 25px - 8px);  
+    /* fix bug: when toggle scroll, the width of ul dynamically changed
+    Here 25px is the the sum of padding-left and padding-right in menu
+    8px is the reserved for scroll
+    */
+ }
 
 #menu ul li {
     height: 50px;
@@ -71,9 +80,6 @@
 #menu ul li.hide {
     display: none;
 }
-#menu ul li.inactive {
-    display: none;
-}
 #menu .line {
     padding: 0.5px 0;
     background-color: #f2f2f2;
@@ -84,9 +90,7 @@
     font-size:large;
     color: #000;
 }
-#menu:hover {
-    overflow-y: scroll;
-}
+
 /*cutsom scroll style for chrome only*/
 ::-webkit-scrollbar{
     width:8px;
