--- a/css+div/dummy-youtube/css/common.css
+++ b/css+div/dummy-youtube/css/common.css
@@ -10,6 +10,7 @@ body {
   background: #f3f2f2;
   font-family: "Roboto", "Arial", "sans-serif";
   color: #4b4b4b;
+  padding-top: 0.01em;
 }
 li, ul {
   list-style-type: none;
